--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,13 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.Seen" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Seen" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/blue_500</item>
         <item name="bottomSheetDialogTheme">@style/ThemeOverlay.App.BottomSheetDialog</item>
+
+        <!--    toolbar overlay    -->
+        <item name="overlapAnchor">false</item>
+        <item name="android:dropDownVerticalOffset">?attr/actionBarSize</item>
     </style>
 
     <style name="Theme.Seen" parent="Base.Theme.Seen" />
