--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:id="@+id/bottom_navigation_home"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@android:color/white"
         app:itemIconTint="@color/selector_navigation"
         app:itemTextColor="@color/selector_navigation"
         app:layout_constraintBottom_toBottomOf="parent"
