--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.Seen" parent="Theme.Material3.Light.NoActionBar">
+    <style name="Base.Theme.Seen" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/blue_500</item>
         <item name="bottomSheetDialogTheme">@style/ThemeOverlay.App.BottomSheetDialog</item>
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
 
         <!--    toolbar overlay    -->
         <item name="overlapAnchor">false</item>
